--- a/Dockerfile_run_eval
+++ b/Dockerfile_run_eval
@@ -1,19 +1,6 @@
-FROM ubuntu:latest
+FROM iainmackie/bert-trec-car-base-env:v1
 
 MAINTAINER iain mackie
-
-# Install essentials
-RUN apt-get update && apt-get install \
-  	-y --no-install-recommends python3 python3-virtualenv \
-    	&& apt-get install git -y 
-
-
-# Pull required code
-RUN git clone https://github.com/gsgoncalves/bert4trec 
-
-# Build virtualenv
-RUN python3 -m virtualenv --python=/usr/bin/python3 /opt/venv
-RUN . /opt/venv/bin/activate && pip install -r bert4trec/requirements.txt
 
 # Run Experiment
 CMD . /opt/venv/bin/activate && exec python bert4trec/run_treccar.py \
