changed run file

--- a/Dockerfile_run_eval
+++ b/Dockerfile_run_eval
@@ -8,16 +8,16 @@ CMD . /opt/venv/bin/activate && exec python bert4trec/run_treccar.py \
   	--bert_config_file=${BERT} \
   	--init_checkpoint=${INIT} \
   	--output_dir=${OUTPUT} \
-  	--trec_output=True \
-  	--do_train=False \
-  	--do_eval=True \
-  	--num_train_steps=400000 \
-  	--num_warmup_steps=40000 \
-  	--train_batch_size=32 \
-  	--eval_batch_size=32 \
-  	--learning_rate=1e-6 \
-  	--max_dev_examples=3000 \
-  	--num_dev_docs=10 \
-  	--max_test_examples=None \
-  	--num_test_docs=1000
+  	--trec_output=${TREC_OUTPUT} \
+  	--do_train=${TRAIN} \
+  	--do_eval=${EVAL} \
+  	--num_train_steps=${TRAIN_STEPS} \
+  	--num_warmup_steps=${WARM_STEPS} \
+  	--train_batch_size=${TRAIN_BATCH} \
+  	--eval_batch_size=${EVAL_BATCH} \
+  	--learning_rate=${LR} \
+  	--max_dev_examples=${MAX_DEV_EX} \
+  	--num_dev_docs=${DEV_DOCS} \
+  	--max_test_examples=${MAX_TEST_EX} \
+  	--num_test_docs=${TEST_DOCS}
 
